# electric-machines

./: .gitignore  AGENTS.md  README.md  draw_vectors.py  ex1_1.py  ex1_2.py  ex1_3.py  pyproject.toml  }
dc_machine/: AGENTS.md  README.md  base.py  compound.py  export_ses.json  magnetization.py  main.py  plan.md  separately_excited.py  series.py  shunt.py  utils.py
dc_machine/examples/: 01_separately_excited_basic_calcs.py  01_separately_excited_machine.py  02_mag_curve_for_example02.csv  02_separately_excited_efficiency.py
dc_machine/tests/: conftest.py  test_01_base_constructor.py  test_02_magnetization.py  test_02_separately_excited.py  test_03_separately_excited.py
induction_motor/: ex1.py  functions.py
induction_motor/exercises/: README.md  ex1.py  ex2_torque_speed_curve.py  helpers_ex1.py  helpers_ex2.py
induction_motor/theoretical_model/: main.py  math_model.py
magnetic_circuits/: README.md  ex1_2.py  ex1_3.py  functions.py
single-phase_transformer/: equivalent_circuit_parameters.py  ex1_equiv_circ.py  main.py  regulation_efficiency.py
single-phase_transformer/theoretical_model/: equivalent_circuit_parameters.py  main.py  regulation_efficiency.py
synchronous_generator/: README.md  ex1.py  math_model.py  }
synchronous_generator/parcial_2/: 01_resistive_load.py  02_inductive_load.py  03_capacitive_load.py  helpers.py
synchronous_machine/: 00_ex1_generator.py  01_ex1_motor.py  README.md  helpers_generator.py  helpers_motor.py
synchronous_machine/generator/: 00_ex0_gen_class_exercise.py  01_gen_isolated.py  01_gen_isolated_1.py  README.md  (+2 more)
(+11 files in other folders)
