[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-machine"
version = "0.1.0"
description = "Educational DC machine models and examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pytest"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["dc_machine*"]
